# mumuki-hspec-server

./: .gitignore  .travis.yml  LICENSE  README.md  cabal.config  cabal.sandbox.config  mumuki-hspec-server.cabal  snapdemo.cabal
config/prod/: Config.hs
config/test/: Config.hs
src/: Common.hs  Config.hs  ExpectationsRunner.hs  Interpreter.hs  JsonFormatter.hs  Main.hs  Protocol.hs  QueryProtocol.hs  QueryServer.hs  RequestValidator.hs  Site.hs  SmellsDetectorRunner.hs  TestCompiler.hs  TestRunner.hs  TestServer.hs
src/Interpreter/: Exit.hs
src/Protocol/: Expectation.hs  Query.hs  Test.hs
src/Protocol/Test/: Expectation.hs  Test.hs
src/RequestValidator/: CodeFuse.hs  Fuse.hs
src/Server/: CodeRunner.hs  Query.hs  Test.hs
src/Server/Test/: ExpectationsRunner.hs  RequestValidator.hs  SmellsDetectorRunner.hs  TestCompiler.hs  TestRunner.hs
src/Server/Test/RequestValidator/: CodeFuse.hs
src/Server/Test/TestRunner/: ResultsReader.hs
src/Test/Hspec/: JsonFormatter.hs
src/Test/Hspec/Formatters/: Structured.hs
src/TestRunner/: ResultsReader.hs
test/: CodeFuseSpec.hs  ExpectationsRunnerSpec.hs  FuseSpec.hs  QueryRunnerSpec.hs  SmellsDetectorRunnerSpec.hs  TestCompilerSpec.hs  TestRunnerSpec.hs  TestServerSpec.hs
