Name:                mumuki-hspec-server
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              flbulgarelli
Maintainer:          flbulgarelli@yahoo.com.ar
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.8

Executable mumuki-hspec-server
  hs-source-dirs:
    src
    config/prod
  main-is: Main.hs

  Build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    snap-core                 >= 0.9   && < 0.10,
    snap-server               >= 0.9   && < 0.10,
    aeson                     >= 0.8   && < 0.9,
    text                      >= 1.2   && < 1.3,
    directory                 >= 1     && < 2,
    temporary                 >= 1.1   && < 1.2,
    process                   >= 1.1   && < 1.4,
    hspec                     >= 2     && < 3,
    hspec-structured-formatter >= 0.1.0.2,
    async                     >= 2     && < 3,
    hs-inspector              >= 0.5.2 && < 0.6.0

  ghc-options:
    -threaded
    -Wall
    -fwarn-tabs
    -funbox-strict-fields
    -O2
    -fno-warn-unused-do-bind
    -fno-warn-missing-signatures

  build-tools:
    happy

library
  ghc-options:
      -Wall
      -fno-warn-missing-signatures
  hs-source-dirs:
      src
      config/test
  exposed-modules:
      Config
      Common
      Protocol.Query
      Protocol.Test
      Protocol.Test.Test
      Protocol.Test.Expectation
      Server.Test
      Server.Test.TestRunner
      Server.Test.TestCompiler
      Server.Test.SmellsDetectorRunner
      Server.Test.ExpectationsRunner
      Server.Test.RequestValidator
      Server.Test.RequestValidator.CodeFuse
      Server.Query
      Interpreter
      Interpreter.Exit
  build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    snap-core                 >= 0.9   && < 0.10,
    snap-server               >= 0.9   && < 0.10,
    aeson                     >= 0.8   && < 0.9,
    text                      >= 1.2   && < 1.3,
    directory                 >= 1     && < 2,
    temporary                 >= 1.1   && < 1.2,
    process                   >= 1.1   && < 1.4,
    hspec                     >= 2     && < 3,
    async                     >= 2     && < 3,
    hs-inspector              >= 0.5.2 && < 0.6.0

  build-tools:
    happy

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
      -fno-warn-missing-signatures
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    snap-core                 >= 0.9   && < 0.10,
    snap-server               >= 0.9   && < 0.10,
    aeson                     >= 0.8   && < 0.9,
    text                      >= 1.2   && < 1.3,
    directory                 >= 1     && < 2,
    temporary                 >= 1.1   && < 1.2,
    process                   >= 1.1   && < 1.4,
    hspec                     >= 2     && < 3,
    async                     >= 2     && < 3,
    hs-inspector              >= 0.5.2 && < 0.6.0,
    mumuki-hspec-server

  build-tools:
    happy
